<resources>
    <string name="app_name">Grassroots Reporting</string>
    <string name="action_settings">Settings</string>
    <string name="roads_drivers">Roads / Drivers</string>
    <string name="water_gas">Water / Gas</string>
    <string name="waste_environment">Waste / Environment</string>
    <string name="criminal_activity">Criminal Activity</string>
    <string name="electricity">Electricity</string>
    <string name="emergency_services">Emergency Services</string>
    <string name="public_transportation">Public Transportation</string>
    <string name="public_education">Public Education</string>
    <string name="server_url_and_port">http://192.168.56.1:8594</string>
</resources>
